New Dapper Templates
New dapper templated and updates for existing templates

--- a/Genie/Templates/Dapper/CommandFlags.tt
+++ b/Genie/Templates/Dapper/CommandFlags.tt
@@ -1,10 +1,9 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
-using System;
-
-namespace <#=GenerationContext.BaseNamespace#>.Dapper
+namespace Indico.DataAccess.Dapper
 {
-     /// <summary>
+
+    /// <summary>
     /// Additional state flags that control command behaviour
     /// </summary>
     [Flags]
