--- a/Genie/Templates/Dapper/DbString.tt
+++ b/Genie/Templates/Dapper/DbString.tt
@@ -5,15 +5,31 @@ using System.Data;
 
 namespace <#=GenerationContext.BaseNamespace#>.Dapper
 {
-	/// <summary>
+    /// <summary>
     /// This class represents a SQL string, it can be used if you need to denote your parameter is a Char vs VarChar vs nVarChar vs nChar
     /// </summary>
-    sealed class DbString
+    public sealed class DbString : SqlMapper.ICustomQueryParameter
     {
+        /// <summary>
+        /// Default value for IsAnsi.
+        /// </summary>
+        public static bool IsAnsiDefault { get; set; }
+
+        /// <summary>
+        /// A value to set the default value of strings
+        /// going through Dapper. Default is 4000, any value larger than this
+        /// field will not have the default value applied.
+        /// </summary>
+        public const int DefaultLength = 4000;
+
         /// <summary>
         /// Create a new DbString
         /// </summary>
-        public DbString() { Length = -1; }
+        public DbString()
+        {
+            Length = -1;
+            IsAnsi = IsAnsiDefault;
+        }
         /// <summary>
         /// Ansi vs Unicode 
         /// </summary>
@@ -43,10 +59,12 @@ namespace <#=GenerationContext.BaseNamespace#>.Dapper
             }
             var param = command.CreateParameter();
             param.ParameterName = name;
-            param.Value = (object)Value ?? DBNull.Value;
-            if (Length == -1 && Value != null && Value.Length <= 4000)
+#pragma warning disable 0618
+            param.Value = SqlMapper.SanitizeParameterValue(Value);
+#pragma warning restore 0618
+            if (Length == -1 && Value != null && Value.Length <= DefaultLength)
             {
-                param.Size = 4000;
+                param.Size = DefaultLength;
             }
             else
             {
