--- a/Genie/Templates/Dapper/FeatureSupport.tt
+++ b/Genie/Templates/Dapper/FeatureSupport.tt
@@ -1,38 +1,35 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
 using System;
-using System.Collections.Generic;
 using System.Data;
-using System.Linq;
 
 namespace <#=GenerationContext.BaseNamespace#>.Dapper
 {
-	/// <summary>
+    /// <summary>
     /// Handles variances in features per DBMS
     /// </summary>
     class FeatureSupport
     {
-        /// <summary>
-        /// Dictionary of supported features index by connection type name
-        /// </summary>
-        private static readonly Dictionary<string, FeatureSupport> FeatureList = new Dictionary<string, FeatureSupport>(StringComparer.InvariantCultureIgnoreCase) {
-            {"sqlserverconnection", new FeatureSupport { Arrays = false}},
-            {"npgsqlconnection", new FeatureSupport {Arrays = true}}
-	    };
+        private static readonly FeatureSupport
+            Default = new FeatureSupport(false),
+            Postgres = new FeatureSupport(true);
 
         /// <summary>
-        /// Gets the featureset based on the passed connection
+        /// Gets the feature set based on the passed connection
         /// </summary>
         public static FeatureSupport Get(IDbConnection connection)
         {
-            string name = connection.GetType().Name;
-            FeatureSupport features;
-            return FeatureList.TryGetValue(name, out features) ? features : FeatureList.Values.First();
+            string name = connection?.GetType().Name;
+            if (string.Equals(name, "npgsqlconnection", StringComparison.OrdinalIgnoreCase)) return Postgres;
+            return Default;
         }
-
+        private FeatureSupport(bool arrays)
+        {
+            Arrays = arrays;
+        }
         /// <summary>
         /// True if the db supports array columns e.g. Postgresql
         /// </summary>
-        public bool Arrays { get; set; }
+        public bool Arrays { get; }
     }
 }
