--- a/Genie/Templates/Dapper/SqlMapper_DapperRowMetaObject.tt
+++ b/Genie/Templates/Dapper/SqlMapper_DapperRowMetaObject.tt
@@ -4,7 +4,7 @@ using System;
 using System.Collections.Generic;
 using System.Reflection;
 
-namespace Indico.DataAccess.Dapper
+namespace <#=GenerationContext.BaseNamespace#>.Dapper 
 {
     partial class SqlMapper
     {
