--- a/Genie/Templates/Dapper/SqlMapper_IMemberMap.tt
+++ b/Genie/Templates/Dapper/SqlMapper_IMemberMap.tt
@@ -2,8 +2,8 @@
 <#@ import namespace="Genie.Base" #>
 using System;
 using System.Reflection;
-
-namespace Indico.DataAccess.Dapper
+ 
+namespace <#=GenerationContext.BaseNamespace#>.Dapper
 {
     partial class SqlMapper
     {
