--- a/Genie/Templates/Dapper/UdtTypeHandler.tt
+++ b/Genie/Templates/Dapper/UdtTypeHandler.tt
@@ -3,7 +3,7 @@
 using System;
 using System.Data;
 
-namespace Indico.DataAccess.Dapper
+namespace <#=GenerationContext.BaseNamespace#>.Dapper
 {
     partial class SqlMapper
     {
@@ -29,7 +29,7 @@ namespace Indico.DataAccess.Dapper
             }
 
             void ITypeHandler.SetValue(IDbDataParameter parameter, object value)
-            {
+            { 
 #pragma warning disable 0618
                 parameter.Value = SanitizeParameterValue(value);
 #pragma warning restore 0618
