--- a/Genie/Templates/Dapper/SqlMapper_DontMap.tt
+++ b/Genie/Templates/Dapper/SqlMapper_DontMap.tt
@@ -1,6 +1,6 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
-namespace Indico.DataAccess.Dapper
+namespace <#=GenerationContext.BaseNamespace#>.Dapper 
 {
     partial class SqlMapper
     {
