--- a/Genie/Templates/Dapper/SqlMapper_ICustomQueryParameter.tt
+++ b/Genie/Templates/Dapper/SqlMapper_ICustomQueryParameter.tt
@@ -2,7 +2,7 @@
 <#@ import namespace="Genie.Base" #>
 using System.Data;
 
-namespace Indico.DataAccess.Dapper
+namespace <#=GenerationContext.BaseNamespace#>.Dapper 
 {
     partial class SqlMapper
     {
