--- a/Genie/Templates/Dapper/SqlMapper_IParameterLookup.tt
+++ b/Genie/Templates/Dapper/SqlMapper_IParameterLookup.tt
@@ -1,7 +1,7 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
 
-namespace Indico.DataAccess.Dapper
+namespace <#=GenerationContext.BaseNamespace#>.Dapper
 {
     partial class SqlMapper
     {
@@ -17,3 +17,4 @@ namespace Indico.DataAccess.Dapper
         }
     }
 }
+ 
