--- a/Genie/Templates/Dapper/SqlMapper_IDataReader.tt
+++ b/Genie/Templates/Dapper/SqlMapper_IDataReader.tt
@@ -4,6 +4,7 @@ using System;
 using System.Collections.Generic;
 using System.Data;
 
+namespace <#=GenerationContext.BaseNamespace#>.Dapper 
 {
     partial class SqlMapper
     {
