--- a/Genie/Templates/Dapper/SqlDataRecordHandler.tt
+++ b/Genie/Templates/Dapper/SqlDataRecordHandler.tt
@@ -1,6 +1,8 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
 using System;
+using System.Collections.Generic;
+using System.Data;
 
 #if !COREFX
 namespace <#=GenerationContext.BaseNamespace#>.Dapper 
