--- a/Genie/Templates/Dapper/SqlDataRecordListTVPParameter.tt
+++ b/Genie/Templates/Dapper/SqlDataRecordListTVPParameter.tt
@@ -1,6 +1,9 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
 using System;
+using System.Collections.Generic;
+using System.Data;
+using System.Reflection;
 
 #if !COREFX
 namespace <#=GenerationContext.BaseNamespace#>.Dapper 
