--- a/Genie/Templates/Infrastructure/ProcedureContainer.tt
+++ b/Genie/Templates/Infrastructure/ProcedureContainer.tt
@@ -23,7 +23,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
 <#}#>
 
 <#foreach(var sp in _schema.Procedures){ #>
-		public T <#=sp.Name#>_Single<T>(<#=sp.ParamString#>) { return Context.Connection.Query<T>("EXEC <#=sp.Name#> <#=sp.PassString#>").FirstOrDefault(); }
+		public T <#=sp.Name#>_Single<T>(<#=sp.ParamString#>) { return Context.Connection.QueryFirstOrDefault<T>("EXEC <#=sp.Name#> <#=sp.PassString#>"); }
 <#}#>
 
 <#foreach(var sp in _schema.Procedures){ #>
