NotIn Filter and Setters for foriegn key properties

--- a/Genie/Templates/Infrastructure/Filters/Abstract/INumberFilter.tt
+++ b/Genie/Templates/Infrastructure/Filters/Abstract/INumberFilter.tt
@@ -14,6 +14,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Abstract
         IExpressionJoin<T, TQ> IsNull();
         IExpressionJoin<T, TQ> IsNotNull();
         IExpressionJoin<T, TQ> In(params double[] items);
+        IExpressionJoin<T, TQ> NotIn(params double[] items);
     }
 }
 
