--- a/Genie/Templates/Infrastructure/Filters/Abstract/IStringFilter.tt
+++ b/Genie/Templates/Infrastructure/Filters/Abstract/IStringFilter.tt
@@ -16,6 +16,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Abstract
         IExpressionJoin<T, TQ> IsNull();
         IExpressionJoin<T, TQ> IsNotNull();
         IExpressionJoin<T, TQ> In(params string[] items);
+        IExpressionJoin<T, TQ> NotIn(params string[] items);
     }
 }
 
