--- a/Genie/Templates/Infrastructure/Filters/Concrete/StringFilter.tt
+++ b/Genie/Templates/Infrastructure/Filters/Concrete/StringFilter.tt
@@ -89,5 +89,11 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Concrete
             _parent.Add(QueryMaker.In(_propertyName, items.Cast<object>().ToArray(), true));
             return new ExpressionJoin<T, TQ>(_parent, _q);
         }
+
+        public IExpressionJoin<T, TQ> NotIn(params string[] items)
+        {
+            _parent.Add(QueryMaker.NotIn(_propertyName, items.Cast<object>().ToArray(), true));
+            return new ExpressionJoin<T, TQ>(_parent, _q);
+        }
     }
 }
